# madronalib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  HOWTO  LICENSE  LICENSE.txt  README  README.md  foo.txt  pathTest.cpp
Source/: CMakeLists.txt
Source/DSP/: MLChangeList.cpp  MLChangeList.h  MLControlEvent.cpp  MLControlEvent.h  MLDSP.cpp  MLDSP.h  MLDSPContext.cpp  MLDSPContext.h  MLDSPEngine.cpp  MLDSPEngine.h  MLDSPUtils.cpp  MLDSPUtils.h  MLFFT.cpp  MLFFT.h  MLMultProxy.cpp  MLMultProxy.h  MLParameter.cpp  MLParameter.h  MLProc.cpp  MLProc.h  MLProcAbs.cpp  MLProcAdd.cpp  MLProcAllpass.cpp  MLProcBiquad.cpp  MLProcBuddy.cpp  MLProcClampSignal.cpp  MLProcContainer.cpp  MLProcContainer.h  MLProcDCBlocker.cpp  MLProcDebug.cpp  MLProcDelay.cpp  MLProcDelayInput.cpp  MLProcDelayInput.h  MLProcDelayOutput.cpp  MLProcDivide.cpp  MLProcDxDt.cpp  MLProcEnvelope.cpp  MLProcExp2.cpp  MLProcFMBandwidth.cpp  MLProcFade.cpp  (+41 more)
Source/LookAndFeel/: MLButton.cpp  MLButton.h  MLDebugDisplay.cpp  MLDebugDisplay.h  MLDial.cpp  MLDial.h  MLDrawableButton.cpp  MLDrawing.cpp  MLDrawing.h  MLEnvelope.cpp  MLEnvelope.h  MLImageBank.cpp  MLImageBank.h  MLLabel.cpp  MLLabel.h  MLLookAndFeel.cpp  MLLookAndFeel.h  MLMenuButton.cpp  MLMenuButton.h  MLMultiButton.cpp  MLMultiButton.h  MLMultiSlider.cpp  MLMultiSlider.h  MLPanel.cpp  MLPanel.h  MLSeparator.cpp  MLSeparator.h  MLTextButton.cpp  MLTextButton.h  MLToggleButton.cpp  MLToggleButton.h  MLTriToggleButton.cpp  MLTriToggleButton.h  MLUI.cpp  MLUI.h  MLUIBinaryData.h  MLWaveform.cpp  MLWaveform.h
Source/MLApp/: MLDebug.cpp  MLDebug.h  MLDebugMac.mm  MLGL.cpp  MLGL.h  MLInputProtocols.h  MLModel.cpp  MLModel.h  MLModelParam.cpp  MLModelParam.h  MLNetServiceHub.cpp  MLNetServiceHub.h  MLOSCListener.cpp  MLOSCListener.h  MLPath.cpp  MLPath.h  MLPlatform.h  MLProperty.cpp  MLProperty.h  MLReporter.cpp  MLReporter.h  MLResponder.h  MLStringUtils.cpp  MLStringUtils.h  MLSymbol.cpp  MLSymbol.h  MLSymbolMap.h  MLT3DHub.cpp  MLT3DHub.h  MLTextStreamListener.h  MLTypes.h
Source/MLJuceApp/: MLAppBorder.cpp  MLAppBorder.h  MLAppState.cpp  MLAppState.h  MLAppView.cpp  MLAppView.h  MLAppWindow.cpp  MLAppWindow.h  MLBoundsConstrainer.cpp  MLBoundsConstrainer.h  MLDefaultFileLocations.cpp  MLDefaultFileLocations.h  MLFile.cpp  MLFile.h  MLFileCollection.cpp  MLFileCollection.h  MLJuceAU.r  MLJuceAUInstrumentWrapper.mm  MLJuceAUWrapper.mm  MLJuceFilesMac.cpp  MLJuceFilesMac.h  MLJuceInclude.h  MLJuceOpenGL.h  MLJuceVSTWrapper.cpp  MLJuceVSTWrapper.mm  MLMenu.cpp  MLMenu.h  MLPageView.cpp  MLPageView.h  MLParamSetter.cpp  MLParamSetter.h  MLPluginController.cpp  MLPluginController.h  MLPluginEditor.cpp  MLPluginEditor.h  MLPluginFormats.h  MLPluginProcessor.cpp  MLPluginProcessor.h  MLPluginView.cpp  MLPluginView.h  (+14 more)
Source/cJSON/: cJSON.h
Source/core/: MLDSP.cpp  MLDSP.h  MLLocks.h  MLResourceMap.h  MLSignal.cpp  MLSignal.h  MLStringUtils.cpp  MLStringUtils.h  MLSymbol.cpp  MLSymbol.h  MLTree.cpp  MLTree.h  MLVector.cpp  MLVector.h
Tests/: AppConfig.h  CMakeLists.txt  JuceHeader.h  OSCTest.cpp  actorTest.cpp  catch.hpp  collectionTest.cpp  dspBufferTest.cpp  dspFiltersTest.cpp  dspGensTest.cpp  dspOpsTest.cpp  main.cpp  messageTest.cpp  parametersTest.cpp  pathTest.cpp  procsTest.cpp  queueTest.cpp  resourceMapTest.cpp  ringBufferTest.cpp  serializationTest.cpp  signalBufferTest.cpp  signalTest.cpp  symbolTest.cpp  testUtils.h  tests.cpp  tests.h  textTest.cpp  timerTest.cpp  treeTest.cpp  valueTest.cpp  vectorOpsTest.cpp
Tests/MadronaLibTests.xcodeproj/: project.pbxproj  rej.mode1v3  rej.pbxuser
examples/: CMakeLists.txt  dspFiltersExample.cpp  dspOpsExample.cpp  portaudioExample.cpp  projectionsExample.cpp  symbolsExample.cpp  timerExample.cpp
examples/MLDemoInstrument/: MLExample.xml
examples/audio-and-midi/: FDTD.cpp  MIDI.cpp  controllers-to-audio.cpp  fdtd.cpp  midi.cpp  params.cpp  reverb.cpp  sine.cpp
examples/core/: CMakeLists.txt  vectorOpsExample.cpp
examples/effect-plugin/: CMakeLists.txt  LICENSE.txt  VST3_SDK.cmake
examples/rtaudio/: FDTD.cpp  RtAudioExample.h  params.cpp  reverb.cpp  sine.cpp
examples/source/: RtAudioExample.h  reverb.cpp  sine.cpp
examples/synth-plugin/: CMakeLists.txt  README.md  clonePlugin.py  setPluginInfo.py
examples/tutorial/: readme.md  symbolsExample.cpp
examples/vst/: CMakeLists.txt  LICENSE.txt  README.md  VST3_SDK.cmake  clonePlugin.py  setPluginInfo.py
source/: CMakeLists.txt
source/DSP/: MLChangeList.cpp  MLChangeList.h  MLControlEvent.cpp  MLControlEvent.h  MLDSP.cpp  MLDSP.h  MLDSPBuffer.cpp  MLDSPBuffer.h  MLDSPConstants.h  MLDSPContext.cpp  MLDSPContext.h  MLDSPDeprecated.cpp  MLDSPDeprecated.h  MLDSPEngine.cpp  MLDSPEngine.h  MLDSPFilters.cpp  MLDSPFilters.h  MLDSPFunctional.h  MLDSPGens.cpp  MLDSPGens.h  MLDSPMath.h  MLDSPMathNEON.h  MLDSPMathSSE.h  MLDSPMathScalar.h  MLDSPOps.cpp  MLDSPOps.h  MLDSPProjections.h  MLDSPRatio.h  MLDSPResampler.h  MLDSPRouting.h  MLDSPSample.h  MLDSPScalarMath.h  MLDSPScale.h  MLDSPSignal.h  MLDSPUtils.cpp  MLDSPUtils.h  MLDSPWindows.h  MLFFT.h  MLMemoryUtils.h  MLMultProxy.cpp  (+85 more)
source/JuceApp/: MLAppBorder.cpp  MLAppBorder.h  MLAppState.cpp  MLAppView.cpp  MLAppWindow.cpp  MLBoundsConstrainer.cpp  MLDefaultFileLocations.cpp  MLFile.cpp  MLFile.h  MLFileCollection.cpp  MLJuceAUWrapper.mm  MLJuceFilesMac.cpp  MLJuceFilesMac.h  MLJuceOpenGL.h  MLJuceVSTWrapper.cpp  MLMenu.cpp  MLMenu.h  MLPageView.cpp  MLPageView.h  MLReporter.h  MLWidget.h  MLWidgetContainer.cpp  MLWidgetContainer.h
source/JuceLookAndFeel/: MLDebugDisplay.cpp  MLDial.cpp  MLDial.h  MLDrawableButton.cpp  MLDrawableButton.h  MLDrawing.cpp  MLEnvelope.cpp  MLEnvelope.h  MLImageBank.cpp  MLLabel.cpp  MLLabel.h  MLLookAndFeel.cpp  MLLookAndFeel.h  MLMenuButton.h  MLMultiButton.cpp  MLMultiSlider.cpp  MLMultiSlider.h  MLProgressBar.cpp  MLSeparator.cpp  MLSeparator.h  MLToggleButton.cpp  MLTriToggleButton.cpp
source/LookAndFeel/: MLButton.cpp  MLButton.h  MLDebugDisplay.cpp  MLDebugDisplay.h  MLDial.cpp  MLDial.h  MLDrawableButton.cpp  MLDrawableButton.h  MLDrawing.cpp  MLLabel.h  (+31 more)
(+568 files in other folders)
